# Flappy-Bird-IA

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/env/: __init__.py  background.py  bird.py  env.py  pipe.py  ui.py  utils.py
src/nn/: __init__.py  genetic.py  nn.py
tests/: conftest.py  test_bird.py  test_factory.py
tests/env/: test_bird.py  test_env.py  test_factory.py  test_pipe.py
